--- a/index.html
+++ b/index.html
@@ -1,18 +1,1 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8">
-  <title>Asesor Financiero</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <div id="container">
-    <h1>Asesor Financiero</h1>
-    <form action="#">
-      <input type="text" id="pregunta" placeholder="Haz tu pregunta">
-      <input type="submit" value="Enviar">
-    </form>
-    <div id="respuesta"></div>
-  </div>
-</body>
-</html>
+<!DOCTYPE html><html><head><link href="https://fonts.googleapis.com/css?family=Inter&display=swap" rel="stylesheet" /><link href="./css/main.css" rel="stylesheet" /><title>Document</title></head><body><div class="v35_3753"><span class="v985_12">Bienvenido a Banorte Móvil</span><div class="v35_4679"></div><span class="v992_8">Al pulsar el botón aceptas los términos legales y el aviso de privacidad.</span><span class="v992_9">Prueba el bot de asesoramiento financiero</span><div class="v985_18"></div></div></body></html>
